# embed-server

./: .gitignore  README.md  makefile  pyproject.toml
embed_server/: __main__.py  embed.py  service.py
embed_server/pb/: api_pb2.py  api_pb2.pyi  api_pb2_grpc.py
lib/go/: api.pb.go  api_grpc.pb.go  go.mod
lib/js/: README.md  bun.lockb  package.json
lib/js/src/: api.client.ts  api.ts  index.ts
proto/: api.proto
